--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
   "homepage": "https://ontavio.de",
   "license": "MIT",
   "require": {
-
+    "php": "^7.2",
+    "ext-curl": "*"
   },
   "authors": [
     {
